@@ -1,5 +1,6 @@
 0.95 (to be released)
 -----------------
+- New: Add SCC Support for CEA-708 Decoder (#1426) 
 - Fix: crash in Rust decoder on ATSC1.0 TS Files (#1407)
 - Removed the --with-gui flag for linux/configure and mac/configure (use the Flutter GUI instead)
 - Fix: segmentation fault in using hardsubx
